server/public/style.css
body
{
    margin: 0;
    padding: 0;
    overflow: hidden;
    
    font-family: Tahoma, Geneva, sans-serif;
}

table
{
    border-collapse: collapse;
}

td
{
    vertical-align: top;
}

.max-width
{
    width: 100%;
}

.max-height
{
    height: 100%;
}

#options-column
{
    position: relative;
    width: 25%;
    background-color: #dc143c;
    
    /*padding: 10px;*/
    text-align: center;
}

#options-column table
{
    width: 100%;
    height: 8vh;
}

#options-column td
{
    width: 50%;
    padding: 0;
}

#blocks
{
    position: absolute;
    bottom: 0;
    
    width: 100%;
}

.block
{
    vertical-align: bottom;
    float: left;
    padding: 30px;
    
    font-size: 24px;
}

.canvas-button
{
    background-color: #ededed;
    border-radius: 0;
    width: 100%;
    height: 100%;
    padding: 0;
    border: 0;
    font-size: 20px;
}
.canvas-button.active
{
    background-color: #eb1f48;
}

#chat-column
{
    width: 75%;
    padding: 30px;
    background-color: #fafafa;
}

#chat-column ul
{
    width: 98%;
    height: 90%;
    padding: 10px;
    
    background-color: white;
    border: 1px solid grey;
    border-radius: 10px;
    list-style-type: none;
}

#chat-column li
{
    height: 5%;
}

#input-area
{
    width: 98%;
    height: 8%;
    
    background-color: white;
    border: 1px solid grey;
    border-radius: 5px;
    padding: 10px;
    
    white-space: nowrap;
}
#input-area textarea
{
    float: left;
    width: 65vw;
    max-width: 65vw;
    resize: none;
    height: 100%;
    max-height: 100%;
    overflow-y: auto;
    
    border: 0;
    font-size: 20px;
}
#input-area textarea:focus
{
    outline: none;
}
#input-area i
{
    float: left;
    font-size: 50px;
    color: #a8a8a8;
    margin-left: 5px;
}
#input-area p
{
    display: block;
    /*float: left;*/
}

.focused
{
    box-shadow: inset 0 0 10px #a8a8a8;
}

.orangeText
{
    color: orange;
}

.redText
{
    color: red;
}

button
{
    background-color: white;
    border: 1px solid grey;
    border-radius: 10px;
    padding: 10px;
    outline: none;
}
button:active
{
    background-color: #eb1f48;
}

#loginBg
{
    width: 100vw;
    height: 100vh;
    background-color: #dc143c;
}

#loginForm
{
    position: fixed;
    width: 60vw;
    height: 50vh;
    margin-left: 20vw;
    transform: translateY(25vh);
    
    background-color: white;
    border: 2px solid grey;
    border-radius: 20px;
    box-shadow: 0px 0px 50px -5px rgba(0,0,0,0.75);
    
    text-align: center;
}

#loginForm > div
{
    float: left;
    height: 100%;
    width: 46%;
    padding: 2%;
}

